# duckdb-pytables

./: .dir-locals.el  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  udfs.py
.github/actions/centos_7_setup/: action.yml
.github/actions/ubuntu_16_setup/: action.yml
.github/workflows/: ExtensionTemplate.yml  Linux.yml  MacOS.yml  PostRelease.yml  Python.yml  Windows.yml
curlbash/: Dockerfile  test-01-expected-failure.sh
examples/: aws.py  chatgpt.py  ghub.py  google_.py
installer/: Dockerfile  ducktables-install.py  get-pytables.py  pytables-install.py  test-01-expected-failure.sh  test-installer.sh  test-load-extension.sql  test-run-query.sql
pythonpkgs/ducktables/: README.md  requirements.txt  setup.py
pythonpkgs/ducktables/ducktables/: __init__.py  aws.py  github.py  openai.py
pythonpkgs/ducktables/ducktables/google/: __init__.py  analytics.py
pythonpkgs/ducktables/tests/ducktables/: test_aws.py  test_github.py  test_google.py  test_init.py  test_openai.py  test_package.py
scripts/: ci-release-artifacts.sh  docker-build-in-container.sh  extension-upload.sh  python-ci.sh  python-release.sh  python-test-integration.sh  python-test.sh
scripts/ci-setup/: install-cmake.sh  install-git-src.sh  install-openssl.sh  install-ubuntu-packages.sh  run-locally.sh
sql/: sheets-query.sql
src/: duckdb_to_py.cpp  log.cpp  pyconvert.cpp  pydeferred_function_call.cpp  pyfunciterator.cpp  pyscalar.cpp  pytable.cpp  pytables_extension.cpp  python_exception.cpp  python_function.cpp  python_table_function.cpp  python_udf_extension.cpp  table_function.cpp
src/cpy/: exception.cpp  function.cpp  module.cpp  object.cpp
src/include/: config.h.in  cpy.hpp  deferred_function_call.hpp  duckdb_to_py.hpp  log.hpp  peekableiterator.hpp  pyconvert.hpp  pydeferred_function_call.hpp  pyfunciterator.hpp  pyiterable_function.hpp  pyscalar.hpp  pytable.hpp  pytables_extension.hpp  python_exception.hpp  python_function.hpp  python_table_function.hpp  python_udf_extension.hpp  table_function.hpp
src/include/cpy/: exception.hpp  function.hpp  module.hpp  object.hpp
test/ducktables-integration/: aws.test  github.test  google.test  openai.test
test/extension-integration/: Dockerfile  test-suite.sql
test/legacy/: pytable.test
test/nodejs/: python_udf_test.js
test/post-release-integration/: Dockerfile  test-query.sql  test-suite.sql.template
test/python/: python_udf_test.py
test/sql/: pyscalar.test  pytable.test  pytable_argslist.test  pytable_examples.test  pytable_parse_args.test  pytable_type_annotations.test  python_table.test  python_udf.test
